--- a/MvcInvoice/MvcInvoice.csproj
+++ b/MvcInvoice/MvcInvoice.csproj
@@ -163,6 +163,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811162114418_Initial.cs" />
+    <Compile Include="Migrations\201811162114418_Initial.Designer.cs">
+      <DependentUpon>201811162114418_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\MvcInvoiceContext.cs" />
@@ -249,6 +253,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201811162114418_Initial.resx">
+      <DependentUpon>201811162114418_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
